@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-09-03T01:28:36Z",
+  "timestamp" : "2022-09-03T08:18:58Z",
   "count_outdated" : 491,
   "uniques_outdated" : 284,
-  "count" : 523,
-  "uniques" : 302,
+  "count" : 524,
+  "uniques" : 303,
   "clones" : [
     {
       "timestamp": "2022-08-20T00:00:00Z",
@@ -100,6 +100,13 @@
       "timestamp": "2022-09-02T00:00:00Z",
       "count": 3,
       "count_minmax": [ 1, 3 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-09-03T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
